<resources>
    <string name="app_name">Budget Buddy</string>
    <string name="title_home">Transactions</string>
    <string name="title_accounts">Balance</string>
    <string name="title_settings">Settings</string>
    <string name="total_balance">Total Balance</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="transactions">Transactions</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="label">Label</string>
    <string name="add_transaction">Add transaction</string>
    <string name="description">Description</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="choose_language">Choose language</string>
    <string name="choose_time_frame">Choose time frame</string>
    <string name="error">Please enter a valid value</string>
    <string-array name="language_options">
        <item>English</item>
        <item>Українська</item>
    </string-array>
    <string-array name="time_options">
        <item>All time</item>
        <item>This year</item>
        <item>This month</item>
        <item>This week</item>
    </string-array>
</resources>