<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"

    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginTop="0dp">

    <TextView
        android:id="@+id/recyclerview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_settings"
        android:textStyle="bold"
        android:textSize="22sp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:layout_marginTop="5dp"/>

    <Switch
        android:id="@+id/darkModeSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"

        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_language"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"/>

        <Spinner
            android:layout_marginLeft="82dp"
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:ignore="RedundantNamespace">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/bottom_nav_menu"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>