<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootView"
    tools:context=".DetailedActivity">

    <ImageButton
        android:id="@+id/closeBtn"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_margin="12dp"
        android:background="@drawable/close_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_gravity="center_horizontal">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switcher"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:checked="true"
                android:textOff="@string/expense"
                android:textOn="@string/income"
                android:thumb="@drawable/thumb_selector"
                app:switchMinWidth="250dp"
                app:track="@drawable/track_selector"
                />

            <TextView
                android:id="@+id/tv_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:paddingStart="16dp"
                android:text="@string/income"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_text_taken"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|right"
                android:paddingEnd="23dp"
                android:text="@string/expense"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:visibility="gone" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/labelLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:hint="@string/label"
            app:boxStrokeWidth="0dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/labelInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="12dp"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amountLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:hint="@string/amount"
            app:boxStrokeWidth="0dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amountInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="12dp"
                android:inputType="numberDecimal|numberSigned"
                android:maxLines="1"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:hint="@string/date"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="12dp"
                android:maxLines="1"
                android:inputType="none"
                android:clickable="true"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:hint="Description"
            app:boxStrokeWidth="0dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="12dp"
                android:inputType="text|textMultiLine"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/updateBtn"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:padding="10dp"
        android:text="Update transaction"
        android:layout_margin="10dp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>